Small cosmetic fix in hexgrid gaps

--- a/som/static/som/style.css
+++ b/som/static/som/style.css
@@ -201,7 +201,8 @@ body {
 
 #som-container.hex-som {
     display: grid;
-    grid-gap: 1px;
+    grid-column-gap: 1px;
+    grid-row-gap: 2px;
 
 }
 
